--- a/sobre.html
+++ b/sobre.html
@@ -194,7 +194,8 @@
                   <h3>Foi então depois de anos de</h3> pesquisa, estudos científicos, estudo de progrmação, algoritmos e criptografia que obtive um insigth e elaborei este manifesto de empresas colaborativas. Após dezenas de livros teóricos de economia e de pesquisadores matemáticos, que acredito que poucos consigam decifrar mas ainda bem que a matemática complexa aprendida nos tempos do curso de engenharia estava a meu favor. <br>Agradeço a todos estes conhecedores de seu tempo e prometo a todos eles dedicarei meu tempo e conhecimento a construção de empresas distribuidas e benevolentes. com o objetivo de recuperar os empregos perdidos na crise a aumentar a comunicação entre comunidades a muito tempo separadas devido a competição capitalista. Abraço!
                   <br>
                   <br>
-                "Distribuir conhecimento é um dos meios de se atingir a imortalidade - Dali Lama"</p>
+                
+"Hackers são aqueles que revelam verdades incovenientes, brechas na segurança e oferecem soluções" concluindo "Os hacker são considerados inimigos em um mundo onde status e vigilância são pontos chaves de poder" - Revista 2600.</p>
               </div>
             </main>
             <hr class="hr--large">
