--- a/manifestoucity.html
+++ b/manifestoucity.html
@@ -114,7 +114,7 @@
                 <!-- begin site-nav -->
                 <ul class="site-nav" id="AccessibleNav">
                   <li class="site-nav__item" style="margin-right: 3em" >
-                    <a href="manifestoucity.html">
+                    <a href="index.html">
                       Manifesto
                     </a>
                   </li>
